--- a/public/src/index.css
+++ b/public/src/index.css
@@ -1,9 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
+body
+{
+  background: url("./assets/background.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 body,
@@ -19,5 +28,5 @@ body {
 }
 
 .Toastify__toast-theme--dark {
-  background-color: #00000076 !important;
+  background-color: #ffffff76;
 }
